console adapter 7