@@ -48,7 +48,6 @@ import java.util.Date;
 import java.util.Observable;
 import java.util.Observer;
 import java.util.ArrayList;
-import java.util.ArrayDeque;
 
 import static android.R.id.edit;
 import static android.icu.lang.UCharacter.GraphemeClusterBreak.L;
@@ -309,7 +308,7 @@ public class MainActivity extends AppCompatActivity {
     public native String callNative();
     public static class ConsoleAdapter extends RecyclerView.Adapter<ConsoleItemHolder> {
         private static final int MAX_LOG_COUNT = 25;
-        private final ArrayDeque<ConsoleItem> logList = new ArrayDeque<ConsoleItem>(MAX_LOG_COUNT);
+        private final ArrayList<ConsoleItem> logList = new ArrayList<ConsoleItem>(MAX_LOG_COUNT);
     
         public ConsoleAdapter() {}
     
@@ -332,10 +331,10 @@ public class MainActivity extends AppCompatActivity {
         
         public void addLog(ArrayList<ConsoleItem> ac) {
             for (ConsoleItem c : ac) {
-                logList.addFirst(c);
+                logList.add(0, c);
             }
             while (logList.size() > MAX_LOG_COUNT)
-                logList.removeLast();
+                logList.remove(logList.size() - 1);
             notifyDataSetChanged();
         }
     }
